@@ -2,12 +2,14 @@ import Part1LinearDataStructure.*;     //import all class from Part1OrderedDataS
 
 public class Main {
     public static void main(String[] args) {
-        DynamicArray array = new DynamicArray(1);
-        array.insert(10);
-        array.insert(20);
-        array.print();
-        array.remove(0);
-        array.print();
-        System.out.println(array.findByValue(20));
+        LinkedList list = new LinkedList();
+        list.addLast(40);
+        list.addLast(50);
+        list.removeFirst();
+        list.addLast(60);
+        list.addLast(70);
+        list.removeLast();
+        list.addFirst(10);
+        list.print();
     }
 }
